Added payment with Stripe and other payment options available with PayPal and Revolut

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,6 +321,7 @@
     <string name="person_name">Person Name</string>
     <string name="destinationHistory">Destination</string>
     <string name="journey_length">Journey Length</string>
+    <string name="pay">Pay</string>
 
 
 </resources>
